# simd

./: CMakeLists.txt  README.md  simd.hpp  simd_array.hpp  simd_intrinsics_alternatives.hpp  simd_intrinsics_wrappers.hpp  simd_test.cpp  simd_vector.hpp  simd_vector_types.hpp
